# sugar-proto

./: CMakeLists.txt  README.md  coverage.sh
.github/workflows/: coverage.yml
cmake/: sugar-protoConfig.cmake.in
example/: CMakeLists.txt  main.cpp  user.proto
src/: emit_header.cpp  emit_header.h  protoc_gen_sugar.cpp  sugar_runtime.h
test/: CMakeLists.txt  emit_header_unit_test.cpp  solo.proto  sugar_runtime_unit_test.cpp  test_messages.proto
